auth token frontend

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,5 +4,6 @@
     Welcome to {{ title }}!
   </h1>
 </div>
-<app-poll-list></app-poll-list>
+<app-login></app-login>
+<!--<app-poll-list></app-poll-list>-->
 
